--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,6 @@
         "php": ">=5.6.4",
         },
     "require-dev": {
-        "phpunit/phpunit": "^5.4.0",
+        "phpunit/phpunit": "^5.4.0"
         }
 }
