--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
             }
         },
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=5.6.4"
         },
     "require-dev": {
         "phpunit/phpunit": "^5.4.0"
